17. Get User By id EndPoint
