# backend/api/docs/swagger.yaml
@@ -52,13 +52,39 @@ info:
   title: Fiber Golang RestApi
   version: "1.0"
 paths:
+  /user/getUser/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get User Detail By ID
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/models.UserModel'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Get User By ID
+      tags:
+      - Users
   /user/signin:
     post:
       consumes:
       - application/json
-      description: Register an ew user by providing email, password
+      description: Login an user by providing email, password
       parameters:
-      - description: user register deatils
+      - description: user Login deatils
         in: body
         name: user
         required: true
@@ -76,7 +102,7 @@ paths:
           schema:
             additionalProperties: true
             type: object
-      summary: Login a new user
+      summary: login a  user
       tags:
       - Authentication
   /user/signup:
@@ -104,7 +130,7 @@ paths:
           schema:
             additionalProperties: true
             type: object
-      summary: Register a new user
+      summary: Gegister a new user
       tags:
       - Authentication
 securityDefinitions:
